output and chart bars

--- a/transform.ipynb
+++ b/transform.ipynb
@@ -1739,6 +1739,63 @@
    "source": [
     "### Step 3: Saving the df and chart to the output excel file "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame and chart saved to output.xlsx.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# assing the output excel file save location path to a variable called 'output_file'\n",
+    "output_file = 'data/output.xlsx'\n",
+    "\n",
+    "#creating save to excel code block using pandas .ExcelWriter() method\n",
+    "\n",
+    "with pd.ExcelWriter(output_file, engine='xlsxwriter') as writer:\n",
+    "\n",
+    "    # save the dataframe df to a sheet named 'Data' using .to_excel() method.\n",
+    "    df.to_excel(writer, sheet_name='Data', index=False)\n",
+    "\n",
+    "    # saving the outliers_and_negative dataframe to a separate sheet named 'Outliers'\n",
+    "    outliers_and_negative.to_excel(writer,sheet_name='Outliers', index=False)\n",
+    "\n",
+    "    # activating the 'data' sheet to place chart in it\n",
+    "    worksheet = writer.sheets['Data']\n",
+    "\n",
+    "    # creatint the chart object on the 'Data' sheet using .add_chart() method\n",
+    "    chart = writer.book.add_chart({'type':'column'})\n",
+    "\n",
+    "    # specifying chart categories and values range\n",
+    "    chart = writer.book.add_chart({'type': 'column'})\n",
+    "    chart.add_series({\n",
+    "        'categories': '=Data!$A$2:$A$' + str(len(df)),  # Product names as x-axis categories\n",
+    "        'values': '=Data!$D$2:$D' + str(len(df)),  # Exclude the last row (total row)\n",
+    "        'name': 'Total Revenue',  # Set the legend label to 'Total Revenue'\n",
+    "    })\n",
+    "    chart.set_title({'name': 'Total Revenue per Product'})\n",
+    "    chart.set_x_axis({'name': 'Product'})\n",
+    "    chart.set_y_axis({'name': 'Total Revenue'})\n",
+    "    chart.set_legend({'position': 'top'})\n",
+    "    chart.set_size({'width': 360, 'height': 288})\n",
+    "\n",
+    "    worksheet.insert_chart('H1', chart)\n",
+    "\n",
+    " # Get the worksheet for the 'Outliers' sheet\n",
+    "    worksheet_outliers = writer.sheets['Outliers']\n",
+    "\n",
+    " # Write the outliers DataFrame to the 'Outliers' sheet\n",
+    "    outliers_range.to_excel(writer, sheet_name='Outliers', index=False)\n",
+    "\n",
+    "print(\"DataFrame and chart saved to output.xlsx.\")"
+   ]
   }
  ],
  "metadata": {
